--- a/Frontend-React/package.json
+++ b/Frontend-React/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "zosh-treading",
+  "name": "trading",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,7 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
     "@hookform/resolvers": "^3.3.4",
+    "@mui/material": "^7.3.5",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
@@ -23,18 +26,19 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
     "apexcharts": "^3.45.2",
-    "axios": "^1.6.7",
+    "axios": "^1.12.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.321.0",
     "react": "^18.2.0",
+    "react-alice-carousel": "^2.9.1",
     "react-apexcharts": "^1.4.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.3",
     "react-redux": "^9.1.0",
     "react-resizable-panels": "^2.0.2",
-    "react-router-dom": "^6.21.3",
+    "react-router-dom": "^6.30.1",
     "recharts": "^2.11.0",
     "redux": "^5.0.1",
     "redux-thunk": "^3.1.0",
